fixed navbar align

--- a/style/style.css
+++ b/style/style.css
@@ -99,6 +99,7 @@ header {
 .nav .nav-link ul {
   list-style: none;
   display: flex;
+  align-items: center;
   gap: 30px;
 }
 
